# go-bazel-container

./: BUILD.bazel  WORKSPACE
api/: BUILD.bazel
